# TSP_GPU

./: 2-opt-sol.cu  2-pot-sol-otm.cu  CMakeLists.txt  README.md  random_sol.cu  random_sol_mem.cu
docs/: doc.html  doc.pmd
docs/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
inputs/: gerador.py  input1  input2  input3  input4  tsp-loc
outputs/: output1  output2
test/: test.py
